fixing nav alignment.

--- a/responsive.css
+++ b/responsive.css
@@ -13,10 +13,6 @@
 	.about {
 		padding-right: 10%;
 	}
-
-	.nav-list-item {		
-		margin-right: 24px;
-	}
 }
 
 /* s - iPhoneX */
